Keyboard arrow controls

--- a/src/components/autocompletion/autocompletion.scss
+++ b/src/components/autocompletion/autocompletion.scss
@@ -1,6 +1,7 @@
 .autocomplete__container {
   width:100%;
   position: relative;
+  max-width: 600px;
 }
 
 .autocomplete__input {
@@ -21,4 +22,8 @@
   &:hover {
     background: #eeeeee;
   }
+}
+
+.autocomplete__active {
+  background: #eeeeee;
 }
